tests/rosetta/out/C/abstract-type.error
cc: exit status 1
/tmp/abstract-type.c: In function ‘beastKind’:
/tmp/abstract-type.c:45:10: warning: assignment to ‘int’ from ‘char *’ makes integer from pointer without a cast [-Wint-conversion]
   45 |     tmp2 = k;
      |          ^
/tmp/abstract-type.c:48:11: error: redefinition of ‘k’
   48 |     char *k = tmp1.value.cat_t.kind;
      |           ^
/tmp/abstract-type.c:43:11: note: previous definition of ‘k’ with type ‘char *’
   43 |     char *k = tmp1.value.dog_t.kind;
      |           ^
/tmp/abstract-type.c:49:11: error: redefinition of ‘_’
   49 |     char *_ = tmp1.value.cat_t.name;
      |           ^
/tmp/abstract-type.c:44:11: note: previous definition of ‘_’ with type ‘char *’
   44 |     char *_ = tmp1.value.dog_t.name;
      |           ^
/tmp/abstract-type.c:50:10: warning: assignment to ‘int’ from ‘char *’ makes integer from pointer without a cast [-Wint-conversion]
   50 |     tmp2 = k;
      |          ^
/tmp/abstract-type.c:56:10: warning: returning ‘int’ from a function with return type ‘char *’ makes pointer from integer without a cast [-Wint-conversion]
   56 |   return tmp2;
      |          ^~~~
/tmp/abstract-type.c: In function ‘beastName’:
/tmp/abstract-type.c:66:10: warning: assignment to ‘int’ from ‘char *’ makes integer from pointer without a cast [-Wint-conversion]
   66 |     tmp4 = n;
      |          ^
/tmp/abstract-type.c:69:11: error: redefinition of ‘_’
   69 |     char *_ = tmp3.value.cat_t.kind;
      |           ^
/tmp/abstract-type.c:64:11: note: previous definition of ‘_’ with type ‘char *’
   64 |     char *_ = tmp3.value.dog_t.kind;
      |           ^
/tmp/abstract-type.c:70:11: error: redefinition of ‘n’
   70 |     char *n = tmp3.value.cat_t.name;
      |           ^
/tmp/abstract-type.c:65:11: note: previous definition of ‘n’ with type ‘char *’
   65 |     char *n = tmp3.value.dog_t.name;
      |           ^
/tmp/abstract-type.c:71:10: warning: assignment to ‘int’ from ‘char *’ makes integer from pointer without a cast [-Wint-conversion]
   71 |     tmp4 = n;
      |          ^
/tmp/abstract-type.c:77:10: warning: returning ‘int’ from a function with return type ‘char *’ makes pointer from integer without a cast [-Wint-conversion]
   77 |   return tmp4;
      |          ^~~~
/tmp/abstract-type.c: In function ‘beastCry’:
/tmp/abstract-type.c:86:11: error: redefinition of ‘_’
   86 |     char *_ = tmp5.value.dog_t.name;
      |           ^
/tmp/abstract-type.c:85:11: note: previous definition of ‘_’ with type ‘char *’
   85 |     char *_ = tmp5.value.dog_t.kind;
      |           ^
/tmp/abstract-type.c:90:11: error: redefinition of ‘_’
   90 |     char *_ = tmp5.value.cat_t.kind;
      |           ^
/tmp/abstract-type.c:86:11: note: previous definition of ‘_’ with type ‘char *’
   86 |     char *_ = tmp5.value.dog_t.name;
      |           ^
/tmp/abstract-type.c:91:11: error: redefinition of ‘_’
   91 |     char *_ = tmp5.value.cat_t.name;
      |           ^
/tmp/abstract-type.c:90:11: note: previous definition of ‘_’ with type ‘char *’
   90 |     char *_ = tmp5.value.cat_t.kind;
      |           ^
