tests/rosetta/out/C/abstract-type.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T10:23:44Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T10:23:44Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
typedef struct beast_t beast_t;
typedef struct dog_t dog_t;
typedef struct cat_t cat_t;

typedef struct dog_t {
  char *kind;
  char *name;
} dog_t;
typedef struct cat_t {
  char *kind;
  char *name;
} cat_t;
typedef struct beast_t {
  int tag;
  union {
    dog_t dog_t;
    cat_t cat_t;
  } value;
} beast_t;
#define beast_t_cat_t 0
#define beast_t_dog_t 1

char *beastKind(beast_t b) {
  beast_t tmp1 = b;
  int tmp2;
  switch (tmp1.tag) {
  case beast_t_dog_t:
    char *k = tmp1.value.dog_t.kind;
    char *_ = tmp1.value.dog_t.name;
    tmp2 = k;
    break;
  case beast_t_cat_t:
    char *k = tmp1.value.cat_t.kind;
    char *_ = tmp1.value.cat_t.name;
    tmp2 = k;
    break;
  default:
    tmp2 = 0;
    break;
  }
  return tmp2;
}

char *beastName(beast_t b) {
  beast_t tmp3 = b;
  int tmp4;
  switch (tmp3.tag) {
  case beast_t_dog_t:
    char *_ = tmp3.value.dog_t.kind;
    char *n = tmp3.value.dog_t.name;
    tmp4 = n;
    break;
  case beast_t_cat_t:
    char *_ = tmp3.value.cat_t.kind;
    char *n = tmp3.value.cat_t.name;
    tmp4 = n;
    break;
  default:
    tmp4 = 0;
    break;
  }
  return tmp4;
}

char *beastCry(beast_t b) {
  beast_t tmp5 = b;
  char *tmp6;
  switch (tmp5.tag) {
  case beast_t_dog_t:
    char *_ = tmp5.value.dog_t.kind;
    char *_ = tmp5.value.dog_t.name;
    tmp6 = "Woof";
    break;
  case beast_t_cat_t:
    char *_ = tmp5.value.cat_t.kind;
    char *_ = tmp5.value.cat_t.name;
    tmp6 = "Meow";
    break;
  default:
    tmp6 = NULL;
    break;
  }
  return tmp6;
}

int bprint(beast_t b) {
  char *tmp7 = concat_string(beastName(b), ", who's a ");
  char *tmp8 = concat_string(tmp7, beastKind(b));
  char *tmp9 = concat_string(tmp8, ", cries: \"");
  char *tmp10 = concat_string(tmp9, beastCry(b));
  char *tmp11 = concat_string(tmp10, "\".");
  printf("%s\n", tmp11);
}

int mochi_main() {
  beast_t d =
      (beast_t){.tag = beast_t_dog_t,
                .value.dog_t = (dog_t){.kind = "labrador", .name = "Max"}};
  beast_t c =
      (beast_t){.tag = beast_t_cat_t,
                .value.cat_t = (cat_t){.kind = "siamese", .name = "Sammy"}};
  bprint(d);
  bprint(c);
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
